Make the timelord systemd template use the localtime -l option by default

--- a/distrib/initscripts/service.timelord.systemd.tmpl
+++ b/distrib/initscripts/service.timelord.systemd.tmpl
@@ -8,7 +8,7 @@ Requires=netatalk-atalkd.service
 [Service]
 Type=forking
 GuessMainPID=no
-ExecStart=:SBINDIR:/timelord
+ExecStart=:SBINDIR:/timelord -l
 Restart=always
 RestartSec=1
 
