--- a/distrib/initscripts/rc.atalk.sysv.tmpl
+++ b/distrib/initscripts/rc.atalk.sysv.tmpl
@@ -66,6 +66,10 @@ atalk_startup() {
 		if [ x"${TIMELORD_RUN}" = x"yes"  -a -x :SBINDIR:/timelord ]; then
 			:SBINDIR:/timelord;		echo ' timelord\c'
 		fi
+
+		if [ x"${A2BOOT_RUN}" = x"yes"  -a -x :SBINDIR:/a2boot ]; then
+			:SBINDIR:/a2boot;		echo ' a2boot\c'
+		fi
 	fi
 
 	if [ x"${CNID_METAD_RUN}" = x"yes" -a -x :SBINDIR:/cnid_metad ]; then
@@ -114,6 +118,10 @@ case "$1" in
 
 	if [ -x :SBINDIR:/timelord ]; then
 		killproc timelord;		echo ' timelord\c'
+	fi
+
+	if [ -x :SBINDIR:/a2boot ]; then
+		killproc a2boot;		echo ' a2boot\c'
 	fi
 
 	# kill atalkd last, since without it the plumbing goes away.
