--- a/distrib/initscripts/rc.atalk.tru64.tmpl
+++ b/distrib/initscripts/rc.atalk.tru64.tmpl
@@ -17,6 +17,7 @@ ATALK_START_PAPD=0
 ATALK_START_CNID_METAD=1
 ATALK_START_AFPD=1
 ATALK_START_TIMELORD=0
+ATALK_START_A2BOOT=0
 
 #
 # kill the named process(es)
